WeeChat - Wee Enhanced Environment for Chat
===========================================

ChangeLog - 2006-05-14

Version 0.1.9 (under dev!):
   * fixed crash with malformed UTF-8 strings
   * fixed crash with ncurses color when too many colors defined in ncurses
     (bug #16556)
   * added new key to find previous completion (shift-tab by default)
   * fixed bug with long outgoing IRC messages (> 512 bytes) (bug #16358)
   * fixed Ruby crash when handler does not return OK or KO (bug #16552)
   * fixed UTF-8 display bug with chars using more than one cell on screen
     (bug #16356)
   * fixed display bug with DCC file size when > 1 Gb
   * fixed refresh bug (deadlock in curses) when terminal is resized
     (bug #16542)
   * fixed nicklist sort bug
   * added russian translations (thanks to Pavel Shevchuk)
   * added german doc (thanks to Frank Zacharias)
   * added missing IRC commands (006, 007, 290, 292, 310, 379, 437, 974)
   * fixed crash when multiple pv have same name: now it's forbidden
     and pv buffer is not renamed (when a nick changes) if another
     exists with same name (bug #16369)
   * command /clear [-all] now clears hotlist
   * fixed crash after /upgrade if a line in history is empty (bug #16379)
   * fixed many crashes with DCC chat (bug #16416)
   * added new option to customize input prompt
   * added nick modes
   * fixed commands 332, 333 (/topic now ok when channel is not opened)
   * removed color encoding and charset conversion for commands (only
     allowed in text sent to channel/private)
   * added hostnames associeted to nicks (available for /ban completion)
   * added "+p" mode for channels, fixed mode display in status bar
   * added nick alignment options
   * fixed /names command: now displays result when not on a channel
   * fixed refresh bug (too many refresh) when terminal is resized
   * fixed nicklist display bugs when on top or bottom of chat window
   * added keyboard handler to plugin API